rock/tests/compile_fail/err.ra
# InvalidBlock
# "ff"
block:
    mov ff A;